// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TopBanner/TopBannerLangPicker (intern) CloseMenuWhenClickOnLangButton play-test 1`] = `
<div data-test-block="true">
  <div class="_container_azp4i_5">
    <div class>
    </div>
    <button class="_button_1hyk0_1  _menuButton_azp4i_17"
            lang="en"
            aria-expanded="false"
            type="button"
    >
      <span class="_iconWrapper_azp4i_20">
        <span class="_flagIcon_azp4i_25">
          <svg xmlns="http://www.w3.org/2000/svg"
               xml:space="preserve"
               aria-hidden="true"
               viewbox="0 0 1000 600"
               class="_flagIconSvg_azp4i_30"
          >
            <style>
              .en-flag_svg__st1{fill:#012169}.en-flag_svg__st2{fill:#c8102e}
            </style>
            <path d="M0 0h1000v600H0z"
                  style="fill: rgb(255, 255, 255);"
            >
            </path>
            <path d="M165.8 200H0v-82.9zM165.8 400 0 482.9V400zM600 600h365.8L600 417.1zM34.2 600H400V417.1zM400 0H34.2L400 182.9zM1000 400v82.9L834.2 400zM965.8 0H600v182.9zM1000 117.1V200H834.2z"
                  class="en-flag_svg__st1"
            >
            </path>
            <path d="M1000 5.3V50L700 200h-89.4zM389.4 200H210.6L0 94.7V5.3zM389.4 400 0 594.7v-89.4L210.6 400zM1000 505.3v89.4L610.6 400h178.8z"
                  class="en-flag_svg__st2"
            >
            </path>
            <path d="M1000 240v120H560v240H440V360H0V240h440V0h120v240z"
                  class="en-flag_svg__st2"
            >
            </path>
          </svg>
        </span>
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _arrowMobile_azp4i_33"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m7 10 5 5 5-5H7Z">
          </path>
        </svg>
      </span>
      English
      <span class="_srOnly_azp4i_133">
        &nbsp;Meny
      </span>
      <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _arrowDesktop_azp4i_41"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m7 10 5 5 5-5H7Z">
        </path>
      </svg>
    </button>
    <div class="_menuArrow_azp4i_67">
    </div>
  </div>
</div>
`;

exports[`Tester/TopBanner/TopBannerLangPicker (intern) Defaults play-test 1`] = `
<div data-test-block="true">
  <div class="_container_azp4i_5">
    <div class="_overlay_azp4i_10">
    </div>
    <button class="_button_1hyk0_1  _menuButton_azp4i_17"
            lang="nb"
            aria-expanded="true"
            type="button"
    >
      <span class="_iconWrapper_azp4i_20">
        <span class="_flagIcon_azp4i_25">
          <svg xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true"
               viewbox="0 0 1100 800"
               class="_flagIconSvg_azp4i_30"
          >
            <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
                  style="fill: rgb(255, 255, 255);"
            >
            </path>
            <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
                  style="fill: rgb(239, 43, 45);"
            >
            </path>
            <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
                  style="fill: rgb(0, 40, 104);"
            >
            </path>
          </svg>
        </span>
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _arrowMobile_azp4i_33"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m7 15 5-5 5 5H7Z">
          </path>
        </svg>
      </span>
      Bokmål
      <span class="_srOnly_azp4i_133">
        &nbsp;Meny
      </span>
      <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _arrowDesktop_azp4i_41"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m7 15 5-5 5 5H7Z">
        </path>
      </svg>
    </button>
    <div class="_menuArrow_azp4i_67">
    </div>
    <div class="_menu_azp4i_17">
      <ul class="_list_azp4i_111">
        <li class="_listItem_azp4i_126">
          <button class="_buttonCurrent_1qb8h_25 _button_1qb8h_1"
                  lang="nb"
                  aria-current="true"
          >
            <span class="_flagWrapper_1qb8h_15">
              <svg xmlns="http://www.w3.org/2000/svg"
                   aria-hidden="true"
                   viewbox="0 0 1100 800"
                   class="_flagIconSvg_azp4i_30"
              >
                <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
                      style="fill: rgb(255, 255, 255);"
                >
                </path>
                <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
                      style="fill: rgb(239, 43, 45);"
                >
                </path>
                <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
                      style="fill: rgb(0, 40, 104);"
                >
                </path>
              </svg>
            </span>
            <span class="_buttonText_1qb8h_21">
              Bokmål
            </span>
            <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
              </path>
            </svg>
          </button>
        </li>
        <li class="_listItem_azp4i_126">
          <button class="_button_1qb8h_1"
                  lang="nn"
                  aria-current="false"
          >
            <span class="_flagWrapper_1qb8h_15">
              <svg xmlns="http://www.w3.org/2000/svg"
                   aria-hidden="true"
                   viewbox="0 0 1100 800"
                   class="_flagIconSvg_azp4i_30"
              >
                <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
                      style="fill: rgb(255, 255, 255);"
                >
                </path>
                <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
                      style="fill: rgb(239, 43, 45);"
                >
                </path>
                <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
                      style="fill: rgb(0, 40, 104);"
                >
                </path>
              </svg>
            </span>
            <span class="_buttonText_1qb8h_21">
              Nynorsk
            </span>
          </button>
        </li>
        <li class="_listItem_azp4i_126">
          <button class="_button_1qb8h_1"
                  lang="en"
                  aria-current="false"
          >
            <span class="_flagWrapper_1qb8h_15">
              <svg xmlns="http://www.w3.org/2000/svg"
                   xml:space="preserve"
                   aria-hidden="true"
                   viewbox="0 0 1000 600"
                   class="_flagIconSvg_azp4i_30"
              >
                <style>
                  .en-flag_svg__st1{fill:#012169}.en-flag_svg__st2{fill:#c8102e}
                </style>
                <path d="M0 0h1000v600H0z"
                      style="fill: rgb(255, 255, 255);"
                >
                </path>
                <path d="M165.8 200H0v-82.9zM165.8 400 0 482.9V400zM600 600h365.8L600 417.1zM34.2 600H400V417.1zM400 0H34.2L400 182.9zM1000 400v82.9L834.2 400zM965.8 0H600v182.9zM1000 117.1V200H834.2z"
                      class="en-flag_svg__st1"
                >
                </path>
                <path d="M1000 5.3V50L700 200h-89.4zM389.4 200H210.6L0 94.7V5.3zM389.4 400 0 594.7v-89.4L210.6 400zM1000 505.3v89.4L610.6 400h178.8z"
                      class="en-flag_svg__st2"
                >
                </path>
                <path d="M1000 240v120H560v240H440V360H0V240h440V0h120v240z"
                      class="en-flag_svg__st2"
                >
                </path>
              </svg>
            </span>
            <span class="_buttonText_1qb8h_21">
              English
            </span>
          </button>
        </li>
        <li class="_listItem_azp4i_126">
          <button class="_button_1qb8h_1"
                  lang="se"
                  aria-current="false"
          >
            <span class="_flagWrapper_1qb8h_15">
              <svg xmlns="http://www.w3.org/2000/svg"
                   aria-hidden="true"
                   viewbox="0 0 808 600"
                   class="_flagIconSvg_azp4i_30"
              >
                <path d="M370 0v116.34c78.64 24.02 136 97.27 136 183.66s-57.36 159.64-136 183.66V600h438V0z"
                      style="fill: rgb(0, 53, 173);"
                >
                </path>
                <path d="M474 300c0-68.53-43.31-127.13-104-149.88v299.76c60.69-22.75 104-81.35 104-149.88"
                      style="fill: rgb(0, 53, 173);"
                >
                </path>
                <path d="M370 116.34V0h-56v108c19.47 0 38.28 2.92 56 8.34M314 492v108h56V483.66c-17.72 5.42-36.53 8.34-56 8.34M370 449.88V150.12c-17.44-6.54-36.31-10.12-56-10.12v320c19.69 0 38.56-3.58 56-10.12"
                      style="fill: rgb(255, 206, 0);"
                >
                </path>
                <path d="M258 449.92c17.43 6.51 36.3 10.08 56 10.08V140c-19.7 0-38.57 3.57-56 10.08v299.83ZM314 108V0h-56v116.31c17.72-5.39 36.52-8.31 56-8.31M258 483.69V600h56V492c-19.48 0-38.28-2.91-56-8.31"
                      style="fill: rgb(0, 114, 41);"
                >
                </path>
                <path d="M122 300c0-86.56 57.28-159.73 136-183.69V0H0v600h258V483.69C179.28 459.72 122 386.55 122 300"
                      style="fill: rgb(220, 36, 31);"
                >
                </path>
                <path d="M154 300c0 68.66 43.26 127.22 104 149.92V150.08c-60.74 22.7-104 81.25-104 149.92"
                      style="fill: rgb(220, 36, 31);"
                >
                </path>
                <path d="M258 449.92c-60.74-22.7-104-81.25-104-149.92s43.26-127.22 104-149.92c17.43-6.51 36.3-10.08 56-10.08v-32c-19.48 0-38.28 2.91-56 8.31-78.72 23.97-136 97.14-136 183.69s57.28 159.73 136 183.69c17.72 5.39 36.52 8.31 56 8.31v-32c-19.7 0-38.57-3.57-56-10.08"
                      style="fill: rgb(0, 53, 173);"
                >
                </path>
                <path d="M314 140c19.69 0 38.56 3.58 56 10.12 60.69 22.75 104 81.35 104 149.88s-43.31 127.13-104 149.88c-17.44 6.54-36.31 10.12-56 10.12v32c19.47 0 38.28-2.92 56-8.34 78.64-24.02 136-97.27 136-183.66s-57.36-159.64-136-183.66c-17.72-5.42-36.53-8.34-56-8.34z"
                      style="fill: rgb(220, 36, 31);"
                >
                </path>
              </svg>
            </span>
            <span class="_buttonText_1qb8h_21">
              Sámegiella
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Tester/TopBanner/TopBannerLangPicker (intern) WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div id="htmlid"
       class="_container_azp4i_5 dummyClassname"
       lang="nb"
       data-testid="123ID"
  >
    <div class>
    </div>
    <button class="_button_1hyk0_1  _menuButton_azp4i_17"
            lang="nb"
            aria-expanded="false"
            type="button"
    >
      <span class="_iconWrapper_azp4i_20">
        <span class="_flagIcon_azp4i_25">
          <svg xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true"
               viewbox="0 0 1100 800"
               class="_flagIconSvg_azp4i_30"
          >
            <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
                  style="fill: rgb(255, 255, 255);"
            >
            </path>
            <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
                  style="fill: rgb(239, 43, 45);"
            >
            </path>
            <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
                  style="fill: rgb(0, 40, 104);"
            >
            </path>
          </svg>
        </span>
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _arrowMobile_azp4i_33"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m7 10 5 5 5-5H7Z">
          </path>
        </svg>
      </span>
      Bokmål
      <span class="_srOnly_azp4i_133">
        &nbsp;Meny
      </span>
      <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _arrowDesktop_azp4i_41"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m7 10 5 5 5-5H7Z">
        </path>
      </svg>
    </button>
    <div class="_menuArrow_azp4i_67">
    </div>
  </div>
</div>
`;

exports[`Tester/TopBanner/TopBannerLangPicker (intern) WithLocale play-test 1`] = `
<div data-test-block="true">
  <div class="_container_azp4i_5">
    <div class="_overlay_azp4i_10">
    </div>
    <button class="_button_1hyk0_1  _menuButton_azp4i_17"
            lang="en"
            aria-expanded="true"
            type="button"
    >
      <span class="_iconWrapper_azp4i_20">
        <span class="_flagIcon_azp4i_25">
          <svg xmlns="http://www.w3.org/2000/svg"
               xml:space="preserve"
               aria-hidden="true"
               viewbox="0 0 1000 600"
               class="_flagIconSvg_azp4i_30"
          >
            <style>
              .en-flag_svg__st1{fill:#012169}.en-flag_svg__st2{fill:#c8102e}
            </style>
            <path d="M0 0h1000v600H0z"
                  style="fill: rgb(255, 255, 255);"
            >
            </path>
            <path d="M165.8 200H0v-82.9zM165.8 400 0 482.9V400zM600 600h365.8L600 417.1zM34.2 600H400V417.1zM400 0H34.2L400 182.9zM1000 400v82.9L834.2 400zM965.8 0H600v182.9zM1000 117.1V200H834.2z"
                  class="en-flag_svg__st1"
            >
            </path>
            <path d="M1000 5.3V50L700 200h-89.4zM389.4 200H210.6L0 94.7V5.3zM389.4 400 0 594.7v-89.4L210.6 400zM1000 505.3v89.4L610.6 400h178.8z"
                  class="en-flag_svg__st2"
            >
            </path>
            <path d="M1000 240v120H560v240H440V360H0V240h440V0h120v240z"
                  class="en-flag_svg__st2"
            >
            </path>
          </svg>
        </span>
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _arrowMobile_azp4i_33"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m7 15 5-5 5 5H7Z">
          </path>
        </svg>
      </span>
      English
      <span class="_srOnly_azp4i_133">
        &nbsp;Meny
      </span>
      <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _arrowDesktop_azp4i_41"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m7 15 5-5 5 5H7Z">
        </path>
      </svg>
    </button>
    <div class="_menuArrow_azp4i_67">
    </div>
    <div class="_menu_azp4i_17">
      <ul class="_list_azp4i_111">
        <li class="_listItem_azp4i_126">
          <button class="_button_1qb8h_1"
                  lang="nb"
                  aria-current="false"
          >
            <span class="_flagWrapper_1qb8h_15">
              <svg xmlns="http://www.w3.org/2000/svg"
                   aria-hidden="true"
                   viewbox="0 0 1100 800"
                   class="_flagIconSvg_azp4i_30"
              >
                <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
                      style="fill: rgb(255, 255, 255);"
                >
                </path>
                <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
                      style="fill: rgb(239, 43, 45);"
                >
                </path>
                <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
                      style="fill: rgb(0, 40, 104);"
                >
                </path>
              </svg>
            </span>
            <span class="_buttonText_1qb8h_21">
              Bokmål
            </span>
          </button>
        </li>
        <li class="_listItem_azp4i_126">
          <button class="_button_1qb8h_1"
                  lang="nn"
                  aria-current="false"
          >
            <span class="_flagWrapper_1qb8h_15">
              <svg xmlns="http://www.w3.org/2000/svg"
                   aria-hidden="true"
                   viewbox="0 0 1100 800"
                   class="_flagIconSvg_azp4i_30"
              >
                <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
                      style="fill: rgb(255, 255, 255);"
                >
                </path>
                <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
                      style="fill: rgb(239, 43, 45);"
                >
                </path>
                <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
                      style="fill: rgb(0, 40, 104);"
                >
                </path>
              </svg>
            </span>
            <span class="_buttonText_1qb8h_21">
              Nynorsk
            </span>
          </button>
        </li>
        <li class="_listItem_azp4i_126">
          <button class="_buttonCurrent_1qb8h_25 _button_1qb8h_1"
                  lang="en"
                  aria-current="true"
          >
            <span class="_flagWrapper_1qb8h_15">
              <svg xmlns="http://www.w3.org/2000/svg"
                   xml:space="preserve"
                   aria-hidden="true"
                   viewbox="0 0 1000 600"
                   class="_flagIconSvg_azp4i_30"
              >
                <style>
                  .en-flag_svg__st1{fill:#012169}.en-flag_svg__st2{fill:#c8102e}
                </style>
                <path d="M0 0h1000v600H0z"
                      style="fill: rgb(255, 255, 255);"
                >
                </path>
                <path d="M165.8 200H0v-82.9zM165.8 400 0 482.9V400zM600 600h365.8L600 417.1zM34.2 600H400V417.1zM400 0H34.2L400 182.9zM1000 400v82.9L834.2 400zM965.8 0H600v182.9zM1000 117.1V200H834.2z"
                      class="en-flag_svg__st1"
                >
                </path>
                <path d="M1000 5.3V50L700 200h-89.4zM389.4 200H210.6L0 94.7V5.3zM389.4 400 0 594.7v-89.4L210.6 400zM1000 505.3v89.4L610.6 400h178.8z"
                      class="en-flag_svg__st2"
                >
                </path>
                <path d="M1000 240v120H560v240H440V360H0V240h440V0h120v240z"
                      class="en-flag_svg__st2"
                >
                </path>
              </svg>
            </span>
            <span class="_buttonText_1qb8h_21">
              English
            </span>
            <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
              </path>
            </svg>
          </button>
        </li>
        <li class="_listItem_azp4i_126">
          <button class="_button_1qb8h_1"
                  lang="se"
                  aria-current="false"
          >
            <span class="_flagWrapper_1qb8h_15">
              <svg xmlns="http://www.w3.org/2000/svg"
                   aria-hidden="true"
                   viewbox="0 0 808 600"
                   class="_flagIconSvg_azp4i_30"
              >
                <path d="M370 0v116.34c78.64 24.02 136 97.27 136 183.66s-57.36 159.64-136 183.66V600h438V0z"
                      style="fill: rgb(0, 53, 173);"
                >
                </path>
                <path d="M474 300c0-68.53-43.31-127.13-104-149.88v299.76c60.69-22.75 104-81.35 104-149.88"
                      style="fill: rgb(0, 53, 173);"
                >
                </path>
                <path d="M370 116.34V0h-56v108c19.47 0 38.28 2.92 56 8.34M314 492v108h56V483.66c-17.72 5.42-36.53 8.34-56 8.34M370 449.88V150.12c-17.44-6.54-36.31-10.12-56-10.12v320c19.69 0 38.56-3.58 56-10.12"
                      style="fill: rgb(255, 206, 0);"
                >
                </path>
                <path d="M258 449.92c17.43 6.51 36.3 10.08 56 10.08V140c-19.7 0-38.57 3.57-56 10.08v299.83ZM314 108V0h-56v116.31c17.72-5.39 36.52-8.31 56-8.31M258 483.69V600h56V492c-19.48 0-38.28-2.91-56-8.31"
                      style="fill: rgb(0, 114, 41);"
                >
                </path>
                <path d="M122 300c0-86.56 57.28-159.73 136-183.69V0H0v600h258V483.69C179.28 459.72 122 386.55 122 300"
                      style="fill: rgb(220, 36, 31);"
                >
                </path>
                <path d="M154 300c0 68.66 43.26 127.22 104 149.92V150.08c-60.74 22.7-104 81.25-104 149.92"
                      style="fill: rgb(220, 36, 31);"
                >
                </path>
                <path d="M258 449.92c-60.74-22.7-104-81.25-104-149.92s43.26-127.22 104-149.92c17.43-6.51 36.3-10.08 56-10.08v-32c-19.48 0-38.28 2.91-56 8.31-78.72 23.97-136 97.14-136 183.69s57.28 159.73 136 183.69c17.72 5.39 36.52 8.31 56 8.31v-32c-19.7 0-38.57-3.57-56-10.08"
                      style="fill: rgb(0, 53, 173);"
                >
                </path>
                <path d="M314 140c19.69 0 38.56 3.58 56 10.12 60.69 22.75 104 81.35 104 149.88s-43.31 127.13-104 149.88c-17.44 6.54-36.31 10.12-56 10.12v32c19.47 0 38.28-2.92 56-8.34 78.64-24.02 136-97.27 136-183.66s-57.36-159.64-136-183.66c-17.72-5.42-36.53-8.34-56-8.34z"
                      style="fill: rgb(220, 36, 31);"
                >
                </path>
              </svg>
            </span>
            <span class="_buttonText_1qb8h_21">
              Sámegiella
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Tester/TopBanner/TopBannerLangPicker (intern) WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="_container_azp4i_5"
       id="dummyIdForwardedFromRef"
  >
    <div class>
    </div>
    <button class="_button_1hyk0_1  _menuButton_azp4i_17"
            lang="nb"
            aria-expanded="false"
            type="button"
    >
      <span class="_iconWrapper_azp4i_20">
        <span class="_flagIcon_azp4i_25">
          <svg xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true"
               viewbox="0 0 1100 800"
               class="_flagIconSvg_azp4i_30"
          >
            <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
                  style="fill: rgb(255, 255, 255);"
            >
            </path>
            <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
                  style="fill: rgb(239, 43, 45);"
            >
            </path>
            <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
                  style="fill: rgb(0, 40, 104);"
            >
            </path>
          </svg>
        </span>
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _arrowMobile_azp4i_33"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m7 10 5 5 5-5H7Z">
          </path>
        </svg>
      </span>
      Bokmål
      <span class="_srOnly_azp4i_133">
        &nbsp;Meny
      </span>
      <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _arrowDesktop_azp4i_41"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m7 10 5 5 5-5H7Z">
        </path>
      </svg>
    </button>
    <div class="_menuArrow_azp4i_67">
    </div>
  </div>
</div>
`;

exports[`Tester/TopBanner/TopBannerLangPicker (intern) WithoutSami play-test 1`] = `
<div data-test-block="true">
  <div class="_container_azp4i_5">
    <div class="_overlay_azp4i_10">
    </div>
    <button class="_button_1hyk0_1  _menuButton_azp4i_17"
            lang="nb"
            aria-expanded="true"
            type="button"
    >
      <span class="_iconWrapper_azp4i_20">
        <span class="_flagIcon_azp4i_25">
          <svg xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true"
               viewbox="0 0 1100 800"
               class="_flagIconSvg_azp4i_30"
          >
            <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
                  style="fill: rgb(255, 255, 255);"
            >
            </path>
            <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
                  style="fill: rgb(239, 43, 45);"
            >
            </path>
            <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
                  style="fill: rgb(0, 40, 104);"
            >
            </path>
          </svg>
        </span>
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _arrowMobile_azp4i_33"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m7 15 5-5 5 5H7Z">
          </path>
        </svg>
      </span>
      Bokmål
      <span class="_srOnly_azp4i_133">
        &nbsp;Meny
      </span>
      <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _arrowDesktop_azp4i_41"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m7 15 5-5 5 5H7Z">
        </path>
      </svg>
    </button>
    <div class="_menuArrow_azp4i_67">
    </div>
    <div class="_menu_azp4i_17">
      <ul class="_list_azp4i_111">
        <li class="_listItem_azp4i_126">
          <button class="_buttonCurrent_1qb8h_25 _button_1qb8h_1"
                  lang="nb"
                  aria-current="true"
          >
            <span class="_flagWrapper_1qb8h_15">
              <svg xmlns="http://www.w3.org/2000/svg"
                   aria-hidden="true"
                   viewbox="0 0 1100 800"
                   class="_flagIconSvg_azp4i_30"
              >
                <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
                      style="fill: rgb(255, 255, 255);"
                >
                </path>
                <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
                      style="fill: rgb(239, 43, 45);"
                >
                </path>
                <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
                      style="fill: rgb(0, 40, 104);"
                >
                </path>
              </svg>
            </span>
            <span class="_buttonText_1qb8h_21">
              Bokmål
            </span>
            <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
              </path>
            </svg>
          </button>
        </li>
        <li class="_listItem_azp4i_126">
          <button class="_button_1qb8h_1"
                  lang="nn"
                  aria-current="false"
          >
            <span class="_flagWrapper_1qb8h_15">
              <svg xmlns="http://www.w3.org/2000/svg"
                   aria-hidden="true"
                   viewbox="0 0 1100 800"
                   class="_flagIconSvg_azp4i_30"
              >
                <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
                      style="fill: rgb(255, 255, 255);"
                >
                </path>
                <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
                      style="fill: rgb(239, 43, 45);"
                >
                </path>
                <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
                      style="fill: rgb(0, 40, 104);"
                >
                </path>
              </svg>
            </span>
            <span class="_buttonText_1qb8h_21">
              Nynorsk
            </span>
          </button>
        </li>
        <li class="_listItem_azp4i_126">
          <button class="_button_1qb8h_1"
                  lang="en"
                  aria-current="false"
          >
            <span class="_flagWrapper_1qb8h_15">
              <svg xmlns="http://www.w3.org/2000/svg"
                   xml:space="preserve"
                   aria-hidden="true"
                   viewbox="0 0 1000 600"
                   class="_flagIconSvg_azp4i_30"
              >
                <style>
                  .en-flag_svg__st1{fill:#012169}.en-flag_svg__st2{fill:#c8102e}
                </style>
                <path d="M0 0h1000v600H0z"
                      style="fill: rgb(255, 255, 255);"
                >
                </path>
                <path d="M165.8 200H0v-82.9zM165.8 400 0 482.9V400zM600 600h365.8L600 417.1zM34.2 600H400V417.1zM400 0H34.2L400 182.9zM1000 400v82.9L834.2 400zM965.8 0H600v182.9zM1000 117.1V200H834.2z"
                      class="en-flag_svg__st1"
                >
                </path>
                <path d="M1000 5.3V50L700 200h-89.4zM389.4 200H210.6L0 94.7V5.3zM389.4 400 0 594.7v-89.4L210.6 400zM1000 505.3v89.4L610.6 400h178.8z"
                      class="en-flag_svg__st2"
                >
                </path>
                <path d="M1000 240v120H560v240H440V360H0V240h440V0h120v240z"
                      class="en-flag_svg__st2"
                >
                </path>
              </svg>
            </span>
            <span class="_buttonText_1qb8h_21">
              English
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
